--- a/css/style.css
+++ b/css/style.css
@@ -114,13 +114,14 @@ label {
 .map {
   background-color: rgba(0, 0, 0, 0.7);
   margin-top: 20px;
-  margin: auto;
   padding: 10px 20px;
   box-sizing: border-box;
   color: #fff;
   font-family: 'Quicksand', sans-serif;
   box-shadow: 0 0 20px 0 #fff;
-  border-radius: 1%; }
+  border-radius: 1%;
+  height: auto;
+  width: 400px; }
   .map ul, .map p {
     text-align: center;
     padding: 1em; }
@@ -183,7 +184,8 @@ h5, .pcarousel {
   background-size: cover; }
 
 @media (max-width: 480px) {
-  form {
-    width: 100%; }
   .grid {
-    grid-template-rows: 1fr 1fr; } }
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden; } }
